k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rag-api
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: dev.YOUR-DNS-NAME
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rag-api
                port:
                  number: 80
